--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,9 @@
   "require": {
     "php": ">=7.1",
     "symfony/orm-pack": "^1.0",
-    "symfony/event-dispatcher": "^3.4 || ^4.0",
     "symfony/security-bundle": "^3.4 || ^4.0",
     "pagerfanta/pagerfanta": "^2.1",
-    "white-october/pagerfanta-bundle": "^1.2",
-    "doctrine/annotations": "^1.8",
-    "symfony/lock": "^3.4 || ^4.0"
+    "white-october/pagerfanta-bundle": "^1.2"
   },
   "autoload": {
     "psr-4": {
@@ -40,11 +37,9 @@
     "phpstan/phpstan-doctrine": "^0.11.1",
     "phpstan/phpstan-symfony": "^0.11.1",
     "twig/extensions": "^1.5",
-    "friendsofphp/php-cs-fixer": "^2.15"
+    "symfony/lock": "^4.2"
   },
   "scripts": {
-    "test": "php -d pcov.enabled=1 ./vendor/bin/phpunit",
-    "csfixer": "vendor/bin/php-cs-fixer fix --config=.php_cs --cache-file=.php_cs.cache --verbose",
-    "phpstan": "vendor/bin/phpstan analyse src"
+    "test": "vendor/bin/phpunit"
   }
 }
